Enemy follows a path and chases the player if it gets too close

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
    <title>Document</title>
 </head>
 <body>
-   
+   <script src="./lib/phaser.js"></script>
+   <script src="./src/prefabs/Phantom.js"></script>
+   <script src="./src/prefabs/Gary.js"></script>
+   <script src="./src/scenes/Play.js"></script>
+   <script src="./src/main.js"></script>
 </body>
 </html>
