--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <script src="./src/prefabs/Phantom.js"></script>
    <script src="./src/prefabs/Gary.js"></script>
    <script src="./src/scenes/Play.js"></script>
+   <script src="./src/scenes/Lab.js"></script>
    <script src="./src/main.js"></script>
 </body>
 </html>
