Changed the name of the study scene. Updated some names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    <script src="./lib/phaser.js"></script>
    <script src="./src/prefabs/Phantom.js"></script>
    <script src="./src/prefabs/Gary.js"></script>
-   <script src="./src/scenes/Play.js"></script>
+   <script src="./src/scenes/Study.js"></script>
+   <script src="./src/scenes/Load.js"></script>
    <script src="./src/scenes/Lab.js"></script>
    <script src="./src/main.js"></script>
 </body>
