--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <script src="./src/scenes/Study.js"></script>
    <script src="./src/scenes/Load.js"></script>
    <script src="./src/scenes/Lab.js"></script>
+   <script src="./src/arrays.js/"></script>
    <script src="./src/main.js"></script>
 </body>
 </html>
