--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <script src="./lib/phaser.js"></script>
    <script src="./src/prefabs/Phantom.js"></script>
    <script src="./src/prefabs/Gary.js"></script>
-   <script src="./src/scenes/Study.js"></script>
+   <script src="./src/scenes/Hub.js"></script>
    <script src="./src/scenes/Load.js"></script>
    <script src="./src/scenes/Lab.js"></script>
    <script src="./src/arrays.js/"></script>
