--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <script src="./src/scenes/Load.js"></script>
    <script src="./src/scenes/Lab.js"></script>
    <script src="./src/scenes/GameOver.js"></script>
+   <script src="./src/scenes/GameClear.js"></script>
    <script src="./src/main.js"></script>
 </body>
 </html>
