--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
    <script src="./src/prefabs/Gary.js"></script>
    <script src="./src/scenes/GameOver.js"></script>
    <script src="./src/scenes/GameClear.js"></script>
+   <script src="./src/scenes/Tutorial.js"></script>
    <script src="./src/scenes/Hub.js"></script>
-   <script src="./src/scenes/Load.js"></script>
+   <script src="./src/scenes/Menu.js"></script>
    <script src="./src/scenes/Lab.js"></script>
    <script src="./src/main.js"></script>
 
