--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br>While rampaging throughout the school, the demons rip the ritual pages from the Necronomicon and hide them throughout the school.
       <br>Collect the missing pages and return them to the Necronomicon altar to send the demons back to Hell.</p>
    <h3 style="font-family:'Courier New'">CONTROLS</h3>
-   <p style="font-family:'Courier New'">Move Gary using the arrow keys.
+   <p style="font-family:'Courier New'">Move Gary using the arrow keys. Press shift to sprint and space bar to improve your field of view.
       <br>Go to the left to enter the Science Lab.
       <br>Find the missing page and return it to the altar in the starting room (colorful tile).
       <br>Be careful of the demons patroling the area.</p>
