Updated game name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Spooky Spooky Ahhhhhh!</title>
+   <title>Demons 101</title>
 </head>
 <body>
    <script src="./lib/phaser.js"></script>
@@ -19,7 +19,7 @@
    <script src="./src/main.js"></script>
 
    <div id="phaser-game"></div>
-   <h2 style="font-family:'Courier New'">Spooky Spooky Ahhhhhh!</h2>
+   <h2 style="font-family:'Courier New'">Demons 101</h2>
    <p style="font-family:'Courier New'">You're Gary, a student at College University, studying late at night.
       <br>But wait! Someone left the library's Necronomicon open, releasing shadow demons into the school.
       <br>While rampaging throughout the school, the demons rip the ritual pages from the Necronomicon and hide them throughout the school.
