Included computer lab scene

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <script src="./src/scenes/Hub.js"></script>
    <script src="./src/scenes/Menu.js"></script>
    <script src="./src/scenes/Lab.js"></script>
+   <script src="./src//scenes/ComputerLab.js"></script>
    <script src="./src/main.js"></script>
 
    <div id="phaser-game"></div>
