--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
    <script src="./src/scenes/Hub.js"></script>
    <script src="./src/scenes/Menu.js"></script>
    <script src="./src/scenes/Lab.js"></script>
-   <script src="./src//scenes/ComputerLab.js"></script>
+   <script src="./src/scenes/ComputerLab.js"></script>
+   <script src="./src/scenes/Library.js"></script>
    <script src="./src/main.js"></script>
 
    <div id="phaser-game"></div>
