Created the hud and computer level

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <script src="./src/prefabs/Gary.js"></script>
    <script src="./src/scenes/GameOver.js"></script>
    <script src="./src/scenes/GameClear.js"></script>
+   <script src="./src/scenes/HUD.js"></script>
    <script src="./src/scenes/Tutorial.js"></script>
    <script src="./src/scenes/Hub.js"></script>
    <script src="./src/scenes/Menu.js"></script>
