Implemented the tutorial

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <script src="./src/prefabs/Phantom.js"></script>
    <script src="./src/prefabs/Gary.js"></script>
    <script src="./src/scenes/GameClear.js"></script>
+   <script src="./src/scenes/Credits.js"></script>
    <script src="./src/scenes/HUD.js"></script>
    <script src="./src/scenes/Cutscene.js"></script>
    <script src="./src/scenes/Tutorial.js"></script>
